feat!: remove orthographic blocks mode
